tests/error_display/hll_defer_reject_continue.err.expected
error: at 9:17: [HTC-ControlFlowInDefer] In function 'f': continue is not allowed inside defer
   |
 9 |         defer { continue; };
   |                 ^^^^^^^^
