tests/error_display/hll_defer_reject_continue.si
# Rendered output of HTC-ControlFlowInDefer for `continue` inside defer.
#
# Kept separate from `hll_defer_control_flow.si` because HLL type-check
# short-circuits at the first HTC error, so only one HTC-* diagnostic
# fires per file. Splitting the break/continue/return variants pins the
# per-keyword message text ("continue is not allowed inside defer").
fn f() {
    loop {
        defer { continue; };
    };
}
